--- a/explorer/Cargo.toml
+++ b/explorer/Cargo.toml
@@ -11,3 +11,12 @@ blake3 = "1.3.1"
 tokio = { version = "1.0", features = ["full"] }
 pbc-colony-common = { version = "0.0.0", path = "../colony-common"}
 pbc-node = { version = "0.0.0", path = "../node"}
+rust_decimal = "1.25.0"
+rust_decimal_macros = "1.25.0"
+pbc-contract-common = { version = "0.0.0", path = "../contract-common"}
+serde-tc = "0.3.2"
+serde_json = { version = "1.0" }
+anyhow = { version = "1.0" }
+
+[dev-dependencies]
+reqwest = { version = "0.11", features = ["json"] }
